[gd_scene load_steps=8 format=3 uid="uid://2k7epwysqpm7"]

[ext_resource type="Script" uid="uid://wrlul6su5i4o" path="res://scenes/ending_scene_script.gd" id="1_tdgb7"]
[ext_resource type="FontFile" uid="uid://c53kogtyjwsss" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_ou7ti"]
[ext_resource type="Texture2D" uid="uid://bcldenqqi3c6l" path="res://assets/planets/Earth-Heart.png" id="3_jajjd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdgb7"]
bg_color = Color(0.0196078, 0.384314, 0.0196078, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ou7ti"]
bg_color = Color(0.0196078, 0.384314, 0.0196078, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jajjd"]
bg_color = Color(0.00688539, 0.0068854, 0.00688539, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b786s"]
bg_color = Color(0.0195541, 0.0195541, 0.0195541, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[node name="main" type="Node2D"]
script = ExtResource("1_tdgb7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -0.626736
anchor_top = -1.0571
anchor_right = 1.3559
anchor_bottom = 1.38889
offset_left = -150.0
offset_top = 86.0009
offset_right = 246.0
offset_bottom = 462.001
color = Color(0.97, 0.97, 0.97, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.395
anchor_right = 0.5
anchor_bottom = 0.395
offset_left = -242.0
offset_top = -208.96
offset_right = 257.0
offset_bottom = 215.04
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ou7ti")
theme_override_font_sizes/font_size = 34
text = "Great job recycling         !
Recycling keeps the earth clean. 80% of the plastic bottles end up in landfills. We need more recycling heros, like YOU!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/Label"]
layout_mode = 0
offset_left = 320.0
offset_top = 38.0
offset_right = 456.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0.617677, 0, 0.968627)
theme_override_fonts/font = ExtResource("2_ou7ti")
theme_override_font_sizes/font_size = 34
text = "HERO"
horizontal_alignment = 1

[node name="Earth-heart" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(256, 193)
rotation = -0.275407
scale = Vector2(0.977273, 1.04375)
texture = ExtResource("3_jajjd")

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 423.0
offset_top = 505.0
offset_right = 759.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("2_ou7ti")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_tdgb7")
theme_override_styles/normal = SubResource("StyleBoxFlat_ou7ti")
text = "Play Again!"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 540.0
offset_top = 564.0
offset_right = 656.0
offset_bottom = 604.0
theme_override_fonts/font = ExtResource("2_ou7ti")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_jajjd")
theme_override_styles/normal = SubResource("StyleBoxFlat_b786s")
text = "Exit"

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
